Improved validation and added support to include incubator modules