@@ -16,8 +16,16 @@ ext {
   javaMainClass = "org.elasticsearch.entitlement.tools.jdkapi.JdkApiExtractor"
 }
 
+def addIncubatorModules = {
+  file("${buildParams.runtimeJavaHome.get()}/jmods")
+    .listFiles()
+    .findAll { it.name.endsWith('.jmod') && it.name.contains('.incubator.') }
+    .collectMany { ['--add-modules', it.name[0..-6]] }
+}
+
 application {
   mainClass.set(javaMainClass)
+  applicationDefaultJvmArgs = addIncubatorModules()
 }
 
 tasks.named("run").configure {
